--- a/app/assets/javascripts/registration.js.erb
+++ b/app/assets/javascripts/registration.js.erb
@@ -18,6 +18,7 @@ function select_radio_div(){
     input_name = radio_input.attr("name");
     reset_radio_input(input_name);
     radio_input.prop('checked',true);
+    radio_input.attr('checked', true);
     div.addClass("btn-primary active");
     set_checkout_amount();
   })
@@ -59,9 +60,9 @@ function init_stripe(mail){
     token: function(token) {
       event_id = $("input[name=event_id]").val();
       event_resource_id = $("input[name=event_resource_id]").val();
-      registration_pack = $("input[name=registration_pack]").val();
-      registration_team = $("input[name=registration_team]").val();
-      registration_group = $("input[name=registration_group]").val();
+      registration_pack = $('input[name=registration_pack]:checked').val();
+      registration_team = $("input[name=registration_team]:checked").val();
+      registration_group = $("input[name=registration_group]:checked").val();
       is_manager = $("input[name=is_manager]").val();
       $.post('/events/'+event_id+'/registrations/',
       {
@@ -105,9 +106,9 @@ function beginApplePay() {
   var session = Stripe.applePay.buildSession(paymentRequest, function(result, completion) {
     event_id = $("input[name=event_id]").val();
     event_resource_id = $("input[name=event_resource_id]").val();
-    registration_pack = $("input[name=registration_pack]").val();
-    registration_team = $("input[name=registration_team]").val();
-    registration_group = $("input[name=registration_group]").val();
+    registration_pack = $('input[name=registration_pack]:checked').val();
+    registration_team = $("input[name=registration_team]:checked").val();
+    registration_group = $("input[name=registration_group]:checked").val();
     is_manager = $("input[name=is_manager]").val();
     $.post('/events/'+event_id+'/registrations/',
     {
