--- a/app/views/registrations/_show.html.erb
+++ b/app/views/registrations/_show.html.erb
@@ -5,7 +5,7 @@
   <div class="panel-body">
     <div class="col-md-12">
       <p>
-        <% current_logged_user.get_registrations_by_event(@event_resource.event).each do |registration| %>
+        <% current_logged_user.get_registrations_by_event(@event_resource.event).each_with_index do |registration, i| %>
         <div class="col-md-4">
           <div class="div-radio">
             <div class="row title-pack">
@@ -22,7 +22,7 @@
           </div>
         </div>
         <div class="col-md-4">
-          <%= render 'registrations/display_pack', :pack => registration.event_pack %>
+          <%= render 'registrations/display_pack', :pack => registration.event_pack, :i => i  %>
         </div>
         <div class="col-md-4">
           <% if registration.team %>
