--- a/app/views/registrations/_stripe_payment.html.erb
+++ b/app/views/registrations/_stripe_payment.html.erb
@@ -1,11 +1,17 @@
 <% if current_logged_user && current_logged_user.is_ready_for_registration %>
 <script type="text/javascript" src="https://checkout.stripe.com/checkout.js"></script>
 <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
-<button id="customButton" class="btn btn-primary btn-lg">Purchase</button>
+<div class="col-md-12" style="margin-bottom:1em;">
+  <button id="customButton" class="btn btn-primary btn-lg" style="width:100%;height:44px;">
+    Pay by card <span class="glyphicon glyphicon-credit-card" aria-hidden="true"></span>
+  </button>
+</div>
+<div class="col-md-12">
+  <button id="apple-pay-button" type="button"></button>
+</div>
 <script>
 init_stripe("<%= current_logged_user.mail %>")
 </script>
-<button id="apple-pay-button" type="button"></button>
 <% else %>
 <div class="panel panel-info" style="margin-top:1em;">
   <div class="panel-heading">
