--- a/app/views/registrations/_new.html.erb
+++ b/app/views/registrations/_new.html.erb
@@ -10,14 +10,23 @@
       </p>
     </div>
     <% end %>
-    <% if current_logged_user && current_logged_user.get_registrations_by_event(@event_resource.event).count > 0 %>
+    <div class="panel panel-info" id="payment_progress" style="display:none;">
+      <div class="panel-heading">
+        <h3 class="panel-title">Payment <span class="glyphicon glyphicon-usd" aria-hidden="true"></span></h3>
+      </div>
+      <div class="panel-body text-center">
+        Payment in progress... <div class="spinner spinner-lg"></div>
+      </div>
+    </div>
+    <div>
+      <% if current_logged_user && current_logged_user.get_registrations_by_event(@event_resource.event).count > 0 %>
       <%= render 'registrations/show' %>
-    <% else %>
-    <% if !@event_resource.game || @event_resource.game.teambased %>
-    <%= render 'registrations/teambased_registration' %>
-    <% else %>
-    <%= render 'registrations/solo_registration'%>
-    <% end %>
-    <% end %>
+      <% else %>
+      <% if !@event_resource.game || @event_resource.game.teambased %>
+      <%= render 'registrations/teambased_registration' %>
+      <% else %>
+      <%= render 'registrations/solo_registration'%>
+      <% end %>
+      <% end %>
+    </div>
   </div>
-</div>
