Update supporter's quota

--- a/app/assets/stylesheets/event_resources.scss
+++ b/app/assets/stylesheets/event_resources.scss
@@ -9,42 +9,42 @@
 
 .ow{
   background: image-url('ow_big.png') no-repeat right;
-  background-size: auto 108px;
+  background-size: auto 100%;
   background-color: #000;
 }
 
 .csgo{
   background: image-url('csgo_big.png') no-repeat right;
-  background-size: auto 108px;
+  background-size: auto 100%;
   background-color: #000;
 }
 
 .lol{
   background: image-url('lol_big.png') no-repeat right;
-  background-size: auto 108px;
+  background-size: auto 100%;
   background-color: #000;
 }
 
 .hs{
   background: image-url('hs_big.png') no-repeat right;
-  background-size: auto 108px;
+  background-size: auto 100%;
   background-color: #000;
 }
 
 .rl{
   background: image-url('rl_big.png') no-repeat right;
-  background-size: auto 108px;
+  background-size: auto 100%;
   background-color: #000;
 }
 
 .fifa{
   background: image-url('fifa_big.png') no-repeat right;
-  background-size: auto 108px;
+  background-size: auto 100%;
   background-color: #000;
 }
 
 .ssb{
   background: image-url('ssb_big.png') no-repeat right;
-  background-size: auto 108px;
+  background-size: auto 100%;
   background-color: #000;
 }
