Huge improvement, add capital letters.WaoW

--- a/app/views/event_resources/_index_local.html.erb
+++ b/app/views/event_resources/_index_local.html.erb
@@ -5,7 +5,7 @@
   <div class="card-pf card-pf-accented card-pf-aggregate-status">
     <h2 class="card-pf-title">
       <% if game %>
-      <a href="<%= event_event_resource_path(event.id, resource.id)%>"><%= game.name.capitalize %></a>
+      <a href="<%= event_event_resource_path(event.id, resource.id)%>"><%= game.name %></a>
       <% else %>
       <a href="<%= event_event_resource_path(event.id, resource.id)%>">
         <%= resource.title %>
