Strong title for registration

--- a/app/views/registrations/_solo_form_new.html.erb
+++ b/app/views/registrations/_solo_form_new.html.erb
@@ -3,7 +3,7 @@
 <%= hidden_field_tag 'event_id', @event_resource.event.id %>
 <div class="row">
   <div class="col-md-4">
-    <h2>Select a <%= @event_resource.event.shortname %> pack</h2>
+    <h2><strong>Select a <%= @event_resource.event.shortname %> pack</strong></h2>
     <div class="form-group">
       <% if @event_resource.event_packs.each_with_index do |pack, i| %>
       <%= render 'registrations/display_pack', :pack => pack, :i => i %>
@@ -24,7 +24,7 @@
     </div>
   </div>
   <div class="col-md-4">
-    <h2>Choose your friend's group</h2>
+    <h2><strong>Choose your friend's group</strong></h2>
     <div class="form-group">
       <div class="col-md-12">
         <% if current_logged_user.users_groups.each do |group| %>
@@ -67,7 +67,7 @@
     </div>
   </div>
   <div class="col-md-4">
-    <h2>Payment</h2>
+    <h2><strong>Payment</strong></h2>
     <div class="form-group">
       <div class="col-md-12 text-center">
         <div id="error_explanation">
