--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -15,6 +15,7 @@
   </ul>
 </div>
 <% end %>
+<%= render 'breadcrumb' %>
 <div class="row">
   <div class="col-md-12">
     <div class="card-pf card-pf-accented card-pf-aggregate-status">
