--- a/app/views/users/_form_new_phone.html.erb
+++ b/app/views/users/_form_new_phone.html.erb
@@ -4,7 +4,7 @@
     What's your phone number
   </label>
   <div class="col-sm-8">
-    <%= f.text_field :phone, class: 'form-control', placeholder: "078 888 22 88", required: true %>
+    <%= f.text_field :phone, class: 'form-control', placeholder: "+41 78 888 22 88", required: true %>
   </div>
 </div>
 <% end %>
