--- a/app/views/event_resources/_show_players_by_resource.html.erb
+++ b/app/views/event_resources/_show_players_by_resource.html.erb
@@ -18,6 +18,13 @@
           <% end %>
           <% end %>
           <%= player.lastname.capitalize %>
+          <% if player.registrations.find_by(event_resource: @event_resource) && player.registrations.find_by(event_resource: @event_resource).paid %>
+          <span class="glyphicon glyphicon-ok text-success" aria-hidden="true"
+          data-toggle="tooltip" data-placement="right" title="Has already paid"></span>
+          <% else %>
+          <span class="glyphicon glyphicon-remove text-danger" aria-hidden="true"
+          data-toggle="tooltip" data-placement="right" title="Hasn't paid yet"></span>
+          <% end %>
         </div>
       </div>
     </div>
