--- a/app/views/teams/_show_teams_by_resource.html.erb
+++ b/app/views/teams/_show_teams_by_resource.html.erb
@@ -26,6 +26,13 @@
             <span class="glyphicon glyphicon-sunglasses" aria-hidden="true"
             data-toggle="tooltip" data-placement="right" title="Team's admin"></span>
             <% end %>
+            <% if user.registrations.find_by(event_resource: @event_resource) && user.registrations.find_by(event_resource: @event_resource).paid %>
+            <span class="glyphicon glyphicon-ok text-success" aria-hidden="true"
+            data-toggle="tooltip" data-placement="right" title="Has already paid"></span>
+            <% else %>
+            <span class="glyphicon glyphicon-remove text-danger" aria-hidden="true"
+            data-toggle="tooltip" data-placement="right" title="Hasn't paid yet"></span>
+            <% end %>
           </li>
           <% end %>
         </div>
