--- a/app/views/registrations/_solo_form_new.html.erb
+++ b/app/views/registrations/_solo_form_new.html.erb
@@ -73,6 +73,7 @@
         <div id="error_explanation">
         </div>
         <%= render 'registrations/stripe_payment' %>
+        <%= render 'registrations/bank_payment' %>
       </div>
     </div>
   </div>
