Updated bank payment instructions

--- a/app/views/registrations/_bank_data.html.erb
+++ b/app/views/registrations/_bank_data.html.erb
@@ -1,6 +1,12 @@
 <p>
-  <h4>Instruction</h4>
-
+  <h4>Instructions</h4>
+  Please indicate in the bank payment communication field:
+  <dl class="dl-horizontal">
+    <dd class="text-left">Last name and first name</dd>
+    <dd class="text-left">Identification email used on <a href="https://member.ggc.ch/">member.ggc.ch</a></dd>
+    <dd class="text-left">Tournament name (ex: GGC 2017 - Counter-Strike: Global Offensive)</dd>
+    <dd class="text-left">Team name (ex: ELV Iron Seals)</dd>
+  </dl>
 </p>
 <p>
   <h4>Bank informations</h4>
