--- a/app/views/registration_mailer/send_ticket.html.erb
+++ b/app/views/registration_mailer/send_ticket.html.erb
@@ -189,7 +189,7 @@
                       Take with you:
                     </td>
                     <td>
-                      A 10m RJ45 cable and <%= link_to "swiss power cords", "https://en.wikipedia.org/wiki/AC_power_plugs_and_sockets#/media/File:J_plug_-_1.jpg"%> 🇨🇭.
+                      A 10m RJ45 cable and <%= link_to "swiss power cords", "https://en.wikipedia.org/wiki/AC_power_plugs_and_sockets#/media/File:J_plug_-_1.jpg"%>.
                     </td>
                     <td class="expander"></td>
                   </tr>
