Fixed tickets rendering

--- a/app/views/registration_mailer/send_ticket.html.erb
+++ b/app/views/registration_mailer/send_ticket.html.erb
@@ -87,7 +87,7 @@
               </tr>
               <tr>
               <td id="qrcontainer" data-color="text" data-size="size text" data-min="10" data-max="26" data-link-color="link text color" data-link-style="font-weight:bold; text-decoration:underline; color:#40aceb;" align="center" style="font:bold 12px/12px Arial, Helvetica, sans-serif; color:#888; padding:0 0 1em;">
-                Scan me at <%= @event.shortname %> entrance:</br>
+                <p>Scan me at <%= @event.shortname %> entrance:</p>
                 <%= image_tag(event_ticket_qr_registration_url(@event, @registration.token)) %>
               </td>
             </tr>
