Change gates ticket validation message

--- a/app/views/registrations/show_ticket.html.erb
+++ b/app/views/registrations/show_ticket.html.erb
@@ -57,7 +57,7 @@
       <div class="text-center">
         <h1 style="font-size:38px;">Unvalid <span class="glyphicon pficon-error-circle-o" aria-hidden="true"></span></h1>
       </div>
-      <h2 class="text-center">There is no registration for this user</h2>
+      <h2 class="text-center">This is not a valid ticket</h2>
       <% end %>
     </div>
   </div>
