--- a/app/views/teams/ask_to_leave.html.erb
+++ b/app/views/teams/ask_to_leave.html.erb
@@ -34,7 +34,7 @@
         <%= render 'form_leave' %>
         <p class="text-right">
           <small>
-            Approuved by
+            Approved by
           </small>
           <%= image_tag "eclypsia", height: '22' %>
         </p>
