--- a/app/views/event_resources/_index_local.html.erb
+++ b/app/views/event_resources/_index_local.html.erb
@@ -52,6 +52,12 @@
               <%= resource.locked_quota %>
             </div>
           </div>
+          <hr />
+          <div class="row text-center" style="font-size:20px;">
+            <div class="col-md-12" aria-hidden="true" data-toggle="tooltip" data-placement="top" title="Tournament size">
+              <%= resource.quota %>
+            </div>
+          </div>
         </span>
       </p>
       <% if !resource.game %>
